fix: logo title alignment, reduce grid background size

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,7 +50,7 @@ body::before {
   position: fixed;
   transition: all 0.5s linear 0s;
   z-index: -1;
-  background: linear-gradient(rgba(113, 113, 113, 0.07) 1px, transparent 1px) 0% 0% / 94px 90px, linear-gradient(to right, rgba(113, 113, 113, 0.07) 1px, transparent 1px) 0% 0% / 94px 90px;
+  background: linear-gradient(rgba(113, 113, 113, 0.07) 1px, transparent 1px) 0% 0% / 24px 20px, linear-gradient(to right, rgba(113, 113, 113, 0.07) 1px, transparent 1px) 0% 0% / 24px 20px;
   width: 100vw;
   height: 100vh;
   color: rgba(113, 113, 113, 0.07);
@@ -61,7 +61,7 @@ body::before {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 99999999;
   border-radius: 50%;
   background-color: red;
   width: 8px;
